src/test/resources/acceptance/reject/assignmentToTrue.ul
boolean bar ()
{
    true = 5;
}
